# lite6Robot_demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Motion_fitting.ipynb  README.md  lite6Robot_demo.code-workspace  main.cpp  trajectory.txt  trajectory_generation.py
Respiratory_motion_tracking/: UGS_Client_Module.py  UGS_Client_Module_original.py  kidney_motion_tracking_Env.yml  main.py
Respiratory_motion_tracking/data/: animal trial data 1.csv  animal trial data 1.xlsx
Respiratory_motion_tracking/utils/: MotionTracking.py  probeArrayQueue.py
algo_data/: 202308011646.csv
example/: CMakeLists.txt
libs/: CMakeLists.txt
libs/include/: control_traj.h  test_api.h
libs/lite6RobotxArmCxxSDK/: CMakeLists.txt
libs/src/: control_traj.cpp  test_api.cpp
libs/test/: CMakeLists.txt  test_api.cpp  test_api.h
lite6Robot_xArmCxxSDK/visual_studio/xarm/: xarm.vcxproj
lite6SDK/: CMakeLists.txt
motion_tracking/: Motion_fitting.ipynb
motion_tracking/algo_data/: 202308011345.csv  202308011630.csv  202308011641.csv  202308011653.csv  curve_fit.m  curve_fit.mlx
motion_tracking/docs/: Extended Kalman Filtering_Tracking a Time_varying Sinusoid.doc
motion_tracking/lib/: attenuation.py  b_mode_gui.py  calibration.py  ellipse.py  folder.py  hifu_us_field.py  image_processing.py  image_registration.py  medical_folder.py  medical_image.py  oscilloscope_read_file.py  pgm.py  pgm_folder.py  sam_base.py
motion_tracking/lib/utility/: define_class.py  math.py  path.py  utillity.py
